kubernetes/backstage-deployment.yaml
# kubernetes/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    app: backstage
    backstage.io/kubernetes-id: cloudnord-backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
        backstage.io/kubernetes-id: cloudnord-backstage
    spec:
      containers:
        - name: backstage
          image: europe-west1-docker.pkg.dev/lgu-demos/backstage/backstage:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
