kubernetes/backstage-service.yaml
# kubernetes/backstage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: http
